--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
+    "react-intersection-observer": "^9.16.0",
     "react-pdf": "^10.0.1",
     "react-resizable-panels": "^3.0.3",
     "recharts": "2.15.4",
